# advent-of-code

./: .pre-commit-config.yaml  README.md  pyproject.toml
2023/day1/: part1.py  solution.py  test.py  test1.py
2023/day2/: solution.py  test.py
src/aoc2023/: __init__.py
src/aoc2023/day1/: __main__.py  solution.py  test_solution.py
src/aoc2023/day10/: __main__.py  solution.py  test_solution.py
src/aoc2023/day11/: __main__.py  solution.py  test_solution.py
src/aoc2023/day12/: __main__.py  solution.py  test_solution.py
src/aoc2023/day13/: __main__.py  solution.py  test_solution.py
src/aoc2023/day14/: __main__.py  solution.py  test_solution.py
src/aoc2023/day15/: __main__.py  solution.py  test_solution.py
src/aoc2023/day16/: __main__.py  solution.py  test_solution.py
src/aoc2023/day17/: __main__.py  solution.py
src/aoc2023/day18/: __main__.py  solution.py  test_solution.py
src/aoc2023/day19/: __main__.py  solution.py  test_solution.py
src/aoc2023/day2/: __main__.py  solution.py  test.py  test_solution.py
src/aoc2023/day20/: __main__.py  solution.py
src/aoc2023/day21/: __main__.py  solution.py  test_solution.py
src/aoc2023/day3/: __main__.py  solution.py  test.py  test_solution.py
src/aoc2023/day4/: __main__.py  solution.py  test_solution.py
src/aoc2023/day5/: __main__.py  solution.py  test_solution.py
src/aoc2023/day6/: __main__.py  solution.py  test_solution.py
src/aoc2023/day7/: __main__.py  solution.py  test_solution.py
src/aoc2023/day8/: __main__.py  solution.py  test_solution.py
src/template/: cookiecutter.json
(+7 files in other folders)
