[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Pedro Calleja <pecalleja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
